# ChangeLog for media-gfx/converseen
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*converseen-0.1.1 (03 Oct 2009)

  03 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> +converseen-0.1.1.ebuild,
  +files/converseen-0.1.1-cflags.patch, +metadata.xml:
  Initial commit of converseen
