@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*converseen-0.1.1-r1 (04 Oct 2009)
+
+  04 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> -converseen-0.1.1.ebuild,
+  +converseen-0.1.1-r1.ebuild:
+  Adding translations and docs, keywording for ~x86
+
 *converseen-0.1.1 (03 Oct 2009)
 
   03 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> +converseen-0.1.1.ebuild,
